@@ -1344,8 +1344,18 @@ typedef struct intPair {
     } intPair;
 
 
+// case type 1:
+// XB
+// AX
+
+// case type 2:
+// AX
+// XB
+
+
 typedef struct cornerLeak {
         intPair a, b;
+        int caseType;
     } cornerLeak;
 
 
@@ -1371,20 +1381,37 @@ void RobHouseGridDisplay::recomputeVisibilityInt() {
 
     // now patch-up blocking map to fix diagonal corners that look like this:
     //
+    //  OOOOOO
     //  OOOXOO
     //  OOXOOO
+    //  OOOOOO
     //
     // And tend to let vision through.
     //
     // We have to spots to consider patching, A and B:
     //
+    //  OOOOOO
     //  OOAXOO
     //  OOXBOO
+    //  OOOOOO
     //
     // We can patch the "back side" safely, because the robber
     // shouldn't be able to see it anyway (if corner blocks vision).
     //
-    // Find the back side:  look at which of A or B is farthest from robber.
+    // Joshua Collins points out a smart, simple algorithm:
+    //
+    // Consider four regions around the gap:
+    //
+    //  AAACCC
+    //  AAAXCC
+    //  DDXBBB
+    //  DDDBBB
+    //
+    // If robber is standing in region A, patch B side of gap.
+    // If robber is standing in region B, patch A side of gap.
+    //
+    // If robber is standing in C or D, patch nothing, because robber cannot
+    // see through the gap anyway.
     
 
     SimpleVector<cornerLeak> leaks;
@@ -1392,21 +1419,24 @@ void RobHouseGridDisplay::recomputeVisibilityInt() {
     for( int y=0; y<HOUSE_D-1; y++ ) {
         for( int x=0; x<HOUSE_D-1; x++ ) {
             
+            // case type 1
             if( blockingMap[ y * HOUSE_D + x ] &&
                 blockingMap[ (y+1) * HOUSE_D + x + 1 ] &&
                 ! blockingMap[ (y+1) * HOUSE_D + x ] &&
                 ! blockingMap[ y * HOUSE_D + x + 1 ] ) {
                 
-                cornerLeak l = { {x, y+1}, {x+1, y} };
+                cornerLeak l = { {x, y+1}, {x+1, y},
+                                 1 };
                 leaks.push_back( l );
                 }
-
+            // case type 2
             if( !blockingMap[ y * HOUSE_D + x ] &&
                 !blockingMap[ (y+1) * HOUSE_D + x + 1 ] &&
                 blockingMap[ (y+1) * HOUSE_D + x ] &&
                 blockingMap[ y * HOUSE_D + x + 1 ] ) {
                 
-                cornerLeak l = { {x, y}, {x+1, y+1} };
+                cornerLeak l = { {x, y}, {x+1, y+1},
+                                 2 };
                 leaks.push_back( l );
                 }
             }
@@ -1418,22 +1448,28 @@ void RobHouseGridDisplay::recomputeVisibilityInt() {
         
         cornerLeak l = *( leaks.getElement( i ) );
         
-        // compute dist squared instead
-        double distA = 
-            (l.a.x - robberX) * (l.a.x - robberX) +
-            (l.a.y - robberY) * (l.a.y - robberY);
-        
-        double distB = 
-            (l.b.x - robberX) * (l.b.x - robberX) +
-            (l.b.y - robberY) * (l.b.y - robberY);
-        
-        // test this for weirdness
-        // I think it breaks in cases where distA ~ distB
-        if( distA > distB + 1 ) {
-            blockingMap[ l.a.y * HOUSE_D + l.a.x ] =  true;
+
+        if( l.caseType == 1 ) {
+            if( robberX <= l.a.x && robberY >= l.a.y ) {
+                // robber in A quadrant, patch B side
+                blockingMap[ l.b.y * HOUSE_D + l.b.x ] =  true;
+                }
+            else if( robberX >= l.b.x && robberY <= l.b.y ) {
+                // robber in B quadrant, patch A side
+                blockingMap[ l.a.y * HOUSE_D + l.a.x ] =  true;
+                }
+            // else robber can't see through gap, patch nothing
             }
-        else if( distB > distA + 1 ) {
-            blockingMap[ l.b.y * HOUSE_D + l.b.x ] =  true;
+        else if( l.caseType == 2 ) {
+            if( robberX <= l.a.x && robberY <= l.a.y ) {
+                // robber in A quadrant, patch B side
+                blockingMap[ l.b.y * HOUSE_D + l.b.x ] =  true;
+                }
+            else if( robberX >= l.b.x && robberY >= l.b.y ) {
+                // robber in B quadrant, patch A side
+                blockingMap[ l.a.y * HOUSE_D + l.a.x ] =  true;
+                }
+            // else robber can't see through gap, patch nothing
             }
         }
     
